fixed spacing

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -102,4 +102,8 @@ img {
   color: red;
 }
 
+.padding {
+  padding-bottom: 40px;
+}
+
 /* Norwex photo cred: https://theresalongo.com/norwex/ */
